5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1723_2502.log
== TEST (2019-05-14 10:40:00) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 12**0.5
	soma = soma + y * (1/x) * (-1)**i
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:12) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 12**0.5
	soma = soma + y * (1/x) * (-1)**i
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:57) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 12**0.5
	soma = soma + y * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:10) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 12**0.5
	soma = soma + y * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:42:00) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:14) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 12**0.5
	soma = soma + y * (1/x) * (-1)**i
print(round(soma,8))
-- EXECUTION TIME:
159.267
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:14) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 12**0.5
	soma = soma + y * (1/x) * (-1)**i
print(round(soma,8))
-- EXECUTION TIME:
155.609
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:19) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:30) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:34) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:40) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
	print(round(soma,8))
-- OUTPUT:
3.46410162
6.92820323
10.39230485
13.85640646
17.32050808
20.78460969
24.24871131
27.71281292
31.17691454
34.64101615
38.10511777
41.56921938
45.033321
48.49742261
51.96152423
55.42562584
58.88972746
62.35382907
65.81793069
69.2820323
72.74613392
76.21023553
79.67433715
83.13843876
86.60254038
90.06664199
93.53074361
96.99484522
100.45894684
103.92304845
107.38715007
110.85125168
114.3153533
117.77945491
121.24355653
124.70765814
128.17175976
131.63586138
135.09996299
138.56406461
142.02816622
145.49226784
148.95636945
152.42047107
155.88457268
159.3486743
162.81277591
166.27687753
169.74097914
173.20508076
176.66918237
180.13328399
183.5973856
187.06148722
190.52558883
193.98969045
197.45379206
200.91789368
204.38199529
207.84609691
211.31019852
214.77430014
218.23840175
221.70250337
225.16660498
228.6307066
232.09480821
235.55890983
239.02301144
242.48711306
245.95121467
249.41531629
252.87941791
256.34351952
259.80762114
263.27172275
266.73582437
270.19992598
273.6640276
277.1281292
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:02) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
	print(round(soma,8))
-- OUTPUT:
3.46410162
6.92820323
10.39230485
13.85640646
17.32050808
20.78460969
24.24871131
27.71281292
31.17691454
34.64101615
38.10511777
41.56921938
45.033321
48.49742261
51.96152423
55.42562584
58.88972746
62.35382907
65.81793069
69.2820323
72.74613392
76.21023553
79.67433715
83.13843876
86.60254038
90.06664199
93.53074361
96.99484522
100.45894684
103.92304845
107.38715007
110.85125168
114.3153533
117.77945491
121.24355653
124.70765814
128.17175976
131.63586138
135.09996299
138.56406461
142.02816622
145.49226784
148.95636945
152.42047107
155.88457268
159.3486743
162.81277591
166.27687753
169.74097914
173.20508076
176.66918237
180.13328399
183.5973856
187.06148722
190.52558883
193.98969045
197.45379206
200.91789368
204.38199529
207.84609691
211.31019852
214.77430014
218.23840175
221.70250337
225.16660498
228.6307066
232.09480821
235.55890983
239.02301144
242.48711306
245.95121467
249.41531629
252.87941791
256.34351952
259.80762114
263.27172275
266.73582437
270.19992598
273.6640276
277.1281292
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:19) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	soma = soma + ((12)**0.5) * ((1/x) * (-1)**i)
print(round(soma,8))
-- OUTPUT:
3.46410162
6.92820323
10.39230485
13.85640646
17.32050808
20.78460969
24.24871131
27.71281292
31.17691454
34.64101615
38.10511777
41.56921938
45.033321
48.49742261
51.96152423
55.42562584
58.88972746
62.35382907
65.81793069
69.2820323
72.74613392
76.21023553
79.67433715
83.13843876
86.60254038
90.06664199
93.53074361
96.99484522
100.45894684
103.92304845
107.38715007
110.85125168
114.3153533
117.77945491
121.24355653
124.70765814
128.17175976
131.63586138
135.09996299
138.56406461
142.02816622
145.49226784
148.95636945
152.42047107
155.88457268
159.3486743
162.81277591
166.27687753
169.74097914
173.20508076
176.66918237
180.13328399
183.5973856
187.06148722
190.52558883
193.98969045
197.45379206
200.91789368
204.38199529
207.84609691
211.31019852
214.77430014
218.23840175
221.70250337
225.16660498
228.6307066
232.09480821
235.55890983
239.02301144
242.48711306
245.95121467
249.41531629
252.87941791
256.34351952
259.80762114
263.27172275
266.73582437
270.19992598
273.6640276
277.1281292
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:45:25) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * ((y/x)
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    print(round(soma,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:13) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * ((y/x)
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    print(round(soma,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:46:48) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    print(round(soma,8))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:52) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- EXECUTION TIME:
105.65
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:52) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- EXECUTION TIME:
105.375
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:52) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- EXECUTION TIME:
105.261
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:52) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- EXECUTION TIME:
121.538
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:52) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- EXECUTION TIME:
105.661
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:52) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
print(round(soma,8))
-- EXECUTION TIME:
105.281
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:

-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:04) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
	i= i +1
print(round(soma,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:52:08) 
-- CODE:
n = int(input("digite o valor de n: "))
i = 0
soma = 0
while(n>i):
	x = (2*i+1) * 3**i
	y = 1 * (-1)**i
	soma = soma + ((12)**0.5) * (y/x)
	i= i +1
print(round(soma,8))
-- EXECUTION TIME:
0.14142
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
